# ICFPC2025

./: README.md  docker-compose.yml  problem-spec.md  run-wrapper.sh
amylase/: README.md  api.py  cli.py  regisiter.json  register.py  server.py  test.py
esports_complex/: aedificium.py  beam_search.py  solver.py
esports_complex/tests/: test_beam_search.py
graph-dump/aleph/: 1757254623.json  1757254832.json  1757254965.json  1757255087.json  1757255232.json  1757263154.json  1757263249.json  1757263314.json  1757263320.json  (+4 more)
hebrew-double/: Makefile  parallel.py  sakazuki.py  simulated_annealing.cpp  simulated_annealing_mkut.cpp  simulated_annealing_mkut_final.cpp
higashi-matsudo/: Cargo.toml
higashi-matsudo/src/: draw.rs  graph.rs  lib.rs  main.rs  union_find.rs
kawatea/: .gitignore  Greedy.java  Makefile  double.cpp  new_simulated_annealing.cpp  parallel.py  simulated_annealing.cpp  simulated_annealing_hebrew.cpp  triple.cpp
lord-crossight/: .dockerignore  Dockerfile  README.md  aedificium.py  api.py  cli.py  cloudbuild.yaml  deploy-to-cloud-run.sh  server.py
megamix/: .gitignore  arena.py
osak/: Makefile  README.md  a.rb  b.rb  go.mod
sakazuki/: api.py  kissat.py  main.py  requirements.txt
shin-kamagaya/: main.py  pyproject.toml
solar_eclipse/: main.py
vertrages/: .gitignore  main.py
wizardry/: .dockerignore  .env.local  DEPLOYMENT.md  Dockerfile  cloudbuild.yaml  deploy-to-cloud-run.sh  package-lock.json  package.json
wrapper/: .gitignore  Dockerfile  README.md  api-spec.txt  go.mod  io-spec.txt  main.go  run-wrapper.sh  test.py
(+501 files in other folders)
