[package]
name = "higashi-matsudo"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
rayon = "1.11.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
